@@ -4,6 +4,9 @@
 
  Changes between 0.9.7 and 0.9.8  [xx XXX 2002]
 
+  *) Make -nameopt work fully for req and add -reqopt switch.
+     [Michael Bell <michael.bell@rz.hu-berlin.de>, Steve Henson]
+
   *) Add support for ECC-based ciphersuites from draft-ietf-tls-ecc-01.txt.
      As these are not official, they are not included in "ALL";
      the "ECCdraft" ciphersuite group alias can be used to select them.
